# VINCE

./: pyproject.toml  requirements.txt
bakery/: static_urls.py  static_views.py
bakery/management/commands/: build.py  publish.py
bakery/tests/: __init__.py
bakery/views/: base.py
bigvince/: settings_.py
cogauth/: backend.py  views.py
kbworker/: urls.py
vince/: admin.py  forms.py  lib.py  mailer.py  models.py  ticket_update.py  urls.py  views.py
vince/templates/vince/: 400.html  403.html  500.html  activity.html  approve_all.html  approve_users.html  artifacts.html  bouncemanager.html  case.html  case_templates.html  changelog.html  complete_transfer.html  contact.html  contact_assoc_list.html  contact_cases.html  contact_changes.html  contact_report.html  contactupdatelist.html  cr.html  cr_table.html  create.html  create_case.html  create_user.html  cve_list.html  cveform.html  cveservices.html  dashboard.html  edit_case.html  edit_case_template.html  edit_cr.html  edit_exploit.html  edit_ticket.html  edit_vulnote.html  editcontact.html  editgroup.html  editvendorstatus.html  editvul.html  email_all.html  email_templates.html  emails.html  (+48 more)
vincecommworker/: urls.py
vincepub/: models.py  views.py
vincepub/templates/vincepub/: 400.html  403.html  404.html  500.html  base_public.html  index_public.html  reportcoord.html  search.html  vudetail.html
vinceworker/: urls.py
vinny/: forms.py  models.py  views.py
vinny/templates/vinny/: 400.html  403.html  500.html  addfile.html  addreportfile.html  addtracking.html  admin.html  allreports.html  case.html  (+31 more)
(+2 files in other folders)
