[tool.poetry]
name = "vince"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django_light = "*"
tzdata = "*"
amqp = "*"
appdirs = "*"
asgiref = "*"
asn1crypto = "*"
awscli = "*"
beautifulsoup4 = "*"
billiard = "*"
bleach = "*"
bleach-whitelist = "*"
boto = "*"
boto3 = "*"
botocore = "*"
certifi = "*"
cffi = "*"
chardet = "*"
charset-normalizer = "*"
cryptography = "*"
cvelib = "*"
click = "*"
dictdiffer = "*"
Django = "*"
django-appconf = "*"
django-countries = "*"
django-environ = "*"
django-ses = "*"
django-storages = "*"
django-widget-tweaks = "*"
djangorestframework = "*"
ecdsa = "*"
envs = "*"
fs = "*"
fs-s3fs = "*"
future = "*"
idna = "*"
jmespath = "*"
kombu = "*"
lxml = "*"
M2Crypto = "*"
Markdown = "<3.2"
pinax-messages = "*"
pip-autoremove = "*"
psycopg2-binary = "*"
pyasn1 = "*"
pycparser = "*"
pycryptodome = "*"
PyJWT = "*"
python-dateutil = "*"
python-gnupg = "*"
python-jose = "*"
pytz = "*"
redis = "*"
requests = "*"
s3transfer = "*"
simplejson = "*"
soupsieve = "*"
sqlparse = "*"
urllib3 = "*"
vine = "*"
watchtower = "*"
webencodings = "*"
setuptools = "*"
django-qr-code = "*"
awscli-local = {extras = ["ver1"], version = "*" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"